--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit==1.47.0
-pandas
-numpy
-scikit-learn
-matplotlib
-altair
+pandas==2.2.3
+scikit-learn==1.6.1
+numpy==1.26.4
+matplotlib==3.10.1
+scipy==1.15.2
+# Add any other packages your app needs explicitly
